--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {
-    "@fancyapps/fancybox": "^3.5.7"
+    "@fancyapps/fancybox": "^3.5.7",
+    "jquery-form-styler": "^2.0.2"
   }
 }
